--- a/report/sections/introduction.tex
+++ b/report/sections/introduction.tex
@@ -1,4 +1,4 @@
-In this report, we outline the process we undertook to implement two classification algorithms: linear discriminant analysis (LDA) and Decision Trees. To complete this, we experimented with two feature generation methods: principle components analysis (PCA) and LDA itself (for use in decision trees.) Throughout this document, we use the terms 'features' and 'attributes' interchangeably.
+In this report, we outline the process we undertook to implement two classification algorithms: linear discriminant analysis (LDA) and Decision Trees. We tested our generated classifiers on the Yale Extended Face Dataset B  and MNIST \cite{lecun-mnisthandwrittendigit-2010} datasets. To complete this, we experimented with two feature generation methods: principle components analysis (PCA) and LDA itself (for use in decision trees.) These were primarily useful in training our decision trees, which require a thorough exploration of the feature space to grow. Note that throughout this document, we use the terms \emph{'features'} and \emph{'attributes'} interchangeably.
 
 After presenting an explanation of our algorithms' implementations, we will discuss our current-best results and our preliminary exploration of the hyperparameter space. The hyperparameters are adjustments that variously control the accuracy and computational complexity of our classifiers. A more thorough exploration and validation of these parameters will be presented in the next installment of the project.
 
