--- a/report/sections/algo_DT.tex
+++ b/report/sections/algo_DT.tex
@@ -16,6 +16,9 @@ This decision tree structure needs to be generated before it can be used with te
 Where \code{set} is the training set, which is a MATLAB structure that contains the raw data (unused), class labels, and generated features. \code{tree} is the returned structure that can be used during testing. It is essentially a nested structure that contains two types of elements: nodes and leaves. At each node of the tree, a feature and threshold are specified. If a test sample's value at that particular feature is less than the threshold, the sample is passed down the left branch of the node. Similarly, if the sample's feature is greater than the threshold, it goes through the right branch. This is repeated until we reach a leaf node, which specifies a class membership. 
 
 The decision tree training algorithm has a few major steps, and proceeds by evaluating a metric called \emph{information gain} at various configurations. For now, suffice it to say that information gain is a scalar that represents the improvement in prediction as we narrow down the set (by growing the tree) to find appropriate leaves. Our implementation most closely follows that of the ID3 and C4.5 algorithms developed by Ross Quinlan in the late 80s and early 90s \cite{wiki:id3} \cite{wiki:c45}.
+
+\pagebreak
+In general, the decision tree training algorithm is described qulitatively as follows:
 %
 \begin{enumerate}
 \item Check stopping conditions, which generate leaves.
@@ -86,7 +89,7 @@ The algorithm is reproduced in pseudocode below.
 \caption{trainDecisionTree} \label{alg:dt}
 \end{algorithm}
 
-%\pagebreak
+\pagebreak
 Once we have trained the decision tree, we can begin to test it by passing the features generated from the test set through the tree. The testing algorithm is reproduced in psuedocode below.
 
 \begin{algorithm}[H]
@@ -129,6 +132,8 @@ Once we have trained the decision tree, we can begin to test it by passing the f
 }
 \caption{testDecisionTree} \label{alg:dt_test}
 \end{algorithm}
+
+With these two algorithms in place, we can train and test decision trees with varying depth and accuracy. Next, we discuss an adjacent concept that is integral to the decision tree algorithm.
 
 \subsubsection{Entropy and Information Gain}
 
