--- a/report/report.tex
+++ b/report/report.tex
@@ -53,6 +53,7 @@ ece 759 project part 1
 
 \section{Algorithm Implementations}
 	\subfile{sections/algo_DT}
+        \subfile{sections/algo_ET}
 	\subfile{sections/lda}
 
 \section{Test Results}
