--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -11,6 +11,8 @@ The table below illustrates the lowest classification errors we were able to ach
     \hline
     Decision Tree & 17.42\% & 57.89\% \\ 
     \hline
+    Extra-Trees & 4.89\% (100 extra-trees) & 34.96\% (100 extra-trees) \\
+    \hline
   \end{tabular}
   \caption{Lowest classification errors achieved with LDA and Decision Trees.}
 \end{table}
