update report, rm comments in code

--- a/report/report.tex
+++ b/report/report.tex
@@ -68,11 +68,12 @@ ece 759 project part 1
 
 \section{Code Listings}
 
-Below are the primary scripts that solve the project. Please see the
+Below are the primary scripts that execute the project. Please see the
 \code{code} folder for supporting functions.
 
 \lstinputlisting[caption=Main Code for Decision Tree on MNIST]{../code/decisionTree/main_dt_MNIST.m}
-\lstinputlisting[caption=Main Code for Decision Tree on Yale B]{../code/decisionTree/main_dt_YaleB.m}
+\lstinputlisting[caption=Main Code for Extra-Trees on Yale B]{../code/extraTree/main_et_YaleB.m}
+\lstinputlisting[caption=Main Code for LDA on MNIST]{../code/lda/ldacode.m}
 
 \end{document}
 
