--- a/report/sections/features.tex
+++ b/report/sections/features.tex
@@ -1,4 +1,4 @@
-\subsection{Decision Tree Feature Generation}
+\subsection{Decision Tree  and Extra-Tree Feature Generation}
 
 In working with the decision trees, we utilized dimensionality reduction techniques including linear discriminant analysis (LDA) and principle components analysis (PCA) for training and testing classical decision trees, which pass over all features to consider which decision nodes to generate. 
 
