--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,6 +23,14 @@
     note = "[Online; accessed 15-March-2018]"
   }
 
+@misc{ wiki:IG,
+    author = "Wikipedia contributors",
+    title = "Linear discriminant analysis --- Wikipedia{,} The Free Encyclopedia",
+    year = "2017",
+    url = "https://en.wikipedia.org/wiki/Linear_discriminant_analysis",
+    note = "[Online; accessed 15-March-2018]"
+  }
+
 @misc{ matlab:fitctree,
   author = "Mathworks",
   title = "MATLAB Documentation - fitctree",
