--- a/report/sections/lda.tex
+++ b/report/sections/lda.tex
@@ -57,4 +57,4 @@ The steps that we follow in our LDA algorithm are as follows.
 
 \subsubsection{Helpful Functions}
 
-To accomplish the above pseudo code, we used own created functions.
+To accomplish the above pseudo code, we used own created functions. After we do steps 1-7, there is a function \code{classify_comparison} which applies discriminant function in order to classify the test data. I also tried to calculate if I get good results using the distances from the centers of each classes, although it did not work very well on MNIST dataset it does perform well with Extended Yale datasets.
