--- a/report/report.tex
+++ b/report/report.tex
@@ -36,6 +36,7 @@ ece 759 project part 1
 \makeFancyTitle
 
 \tableofcontents
+\pagebreak
 \makeatletter
 \let\@starttoc\@multitoc@starttoc
 \listoffigures
