--- a/report/report.tex
+++ b/report/report.tex
@@ -1,4 +1,3 @@
-=======
 \iffalse
 
 n casale
@@ -19,7 +18,7 @@ ece 759 project part 1
 \usepackage[toc, lof, lot]{multitoc}
 
 % add bib to toc
-\usepackage[nottoc,numbib]{tocbibind} 
+%\usepackage[nottoc,numbib]{tocbibind} 
 
 % for block comments in matlab listings
 \usepackage{matlab-prettifier}
